# Unicraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Unicraft.cpp
docs/: index.html
page/: index.html
shaders/: compile.bat  shader.frag  shader.tesc  shader.tese  shader.vert
src/main/: Unicraft.cpp  main.cpp  main.h
src/render/: render.cpp  render.h
src/render/gui/: gui.cpp  gui.h
src/setup/: setup.cpp  setup.h
src/util/: rand.cpp  rand.h
